# deltatensors

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
deltatensors/: __init__.py  compress.py  compress_int4.py  format.py  io.py  lineage.py  training.py
docs/: api.md  getting-started.md  index.md
tests/: test_chain.py  test_deltatensors.py  test_training.py
