[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltatensors"
version = "0.1.0"
description = "Lossless delta-compressed weight format for fine-tuned neural network models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Aarav Gaur" },
]
keywords = ["deep-learning", "model-weights", "fine-tuning", "compression", "serialization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev   = ["pytest>=7", "numpy>=1.24"]

[project.urls]
Homepage   = "https://github.com/AaravGaurdev/deltatensors"
Repository = "https://github.com/AaravGaurdev/deltatensors"

[tool.setuptools.packages.find]
where = ["."]
include = ["deltatensors*"]
